cabal-version:      2.4
name:               cardano-transaction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Fischoff
maintainer:         jonathangfischoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
      , process
      , transformers
      , mtl
      , containers
      , cardano-api
      , plutus-ledger-api
      , aeson
      , bytestring
      , filepath
      , lens
      , lens-aeson
      , split
      , temporary
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      NumericUnderscores
      RecordWildCards
      GeneralizedNewtypeDeriving
      OverloadedStrings
    exposed-modules:
      Cardano.Transaction
    ghc-options:
      -Wall -Wcompat -Werror
