cabal-version:      2.4
name:               cardano-transaction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Fischoff
maintainer:         jonathangfischoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base               ^>=4.14.0.0
    , bytestring
    , cardano-api
    , containers
    , extra
    , filepath
    , lens
    , lens-aeson
    , managed
    , mtl
    , plutus-ledger-api
    , split
    , temporary
    , transformers
    , typed-process
    , megaparsec

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    GeneralizedNewtypeDeriving
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    NamedFieldPuns

  exposed-modules:
    Cardano.Example
    Cardano.Transaction

  ghc-options:        -Wall -Wcompat -Werror

test-suite tests
  type: exitcode-stdio-1.0
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    GeneralizedNewtypeDeriving
    LambdaCase
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    NamedFieldPuns
    QuasiQuotes
  hs-source-dirs:     tests
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-T"
  build-depends: base
               , cardano-transaction
               , hspec
               , megaparsec
               , here
               , cardano-api
               , containers
